--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="http://dmaps.daum.net/map_js_init/postcode.v2.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/superagent/3.8.2/superagent.min.js")
   //-   script(src="http://code.jquery.com/jquery-1.12.4.js"
   //- integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
   //- crossorigin="anonymous")
