--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  script(src="/index.js")
   h1(style="text-align: center;") I need More Information
   input(id="address" type="hidden")
   #wrap(style="display:none;position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;")
@@ -28,29 +29,8 @@ block content
     let execDaumPostcode = (() => {
         new daum.Postcode({
             oncomplete: function(data) {
-                // 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
-
-                // 각 주소의 노출 규칙에 따라 주소를 조합한다.
-                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
                 var fullAddr = data.address; // 최종 주소 변수
                 var extraAddr = ''; // 조합형 주소 변수
-
-                // 기본 주소가 도로명 타입일때 조합한다.
-                //- if(data.addressType === 'R'){
-                //-     //법정동명이 있을 경우 추가한다.
-                //-     if(data.bname !== ''){
-                //-         extraAddr += data.bname;
-                //-     }
-                //-     // 건물명이 있을 경우 추가한다.
-                //-     if(data.buildingName !== ''){
-                //-         extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
-                //-     }
-                //-     // 조합형주소의 유무에 따라 양쪽에 괄호를 추가하여 최종 주소를 만든다.
-                //-     fullAddr += (extraAddr !== '' ? ' ('+ extraAddr +')' : '');
-                //- }
-
-                // 우편번호와 주소 정보를 해당 필드에 넣는다.
-                //- document.getElementById('address').value = fullAddr;
 
                 let sido_name = data.sido;
                 let sigungu_name = data.sigungu;
@@ -110,11 +90,21 @@ block content
                   default:
                     sido_code = '021017';
                 }
+
                 console.debug('sido_name::', sido_name )
                 console.debug('sigungu_name::', sigungu_name )
                 console.debug('sido_code::', sido_code )
-                // iframe을 넣은 element를 안보이게 한다.
-                // (autoClose:false 기능을 이용한다면, 아래 코드를 제거해야 화면에서 사라지지 않는다.)
+
+                superagent
+                  .post('/people')
+                  .send({
+                    sigunguName: sigungu_name,
+                    sidoCode: sido_code
+                  })
+                  .then(res => {
+                    console.log(res)
+                  })
+
                 element_wrap.style.display = 'none';
                 search__btn.innerText = "다시 검색";
             },
